[FLINK-XXXXX][Build/Shaded] Add Zookeeper 39 with version 3.9.2

--- a/flink-shaded-zookeeper-parent/pom.xml
+++ b/flink-shaded-zookeeper-parent/pom.xml
@@ -35,6 +35,7 @@ under the License.
     <modules>
         <module>flink-shaded-zookeeper-37</module>
         <module>flink-shaded-zookeeper-38</module>
+        <module>flink-shaded-zookeeper-39</module>
     </modules>
 
     <properties>
