[FLINK-XXXXX][Build/Shaded] Set Java version to 17

--- a/pom.xml
+++ b/pom.xml
@@ -131,11 +131,10 @@ under the License.
                                 <configuration>
                                     <rules>
                                         <requireJavaVersion>
-                                            <version>1.8.0</version>
+                                            <version>17</version>
                                         </requireJavaVersion>
                                         <requireMavenVersion>
-                                            <!-- maven version must be lower than 3.3. See FLINK-3158 -->
-                                            <version>(,3.3)</version>
+                                            <version>[3.8.6]</version>
                                         </requireMavenVersion>
                                     </rules>
                                 </configuration>
